--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
 
         <!-- Second Part (Dim Black Background for Contact Info) -->
         <div class="part2">
+            <h3>OMG</h3>
+            <p>vq_1</p>
             <h2>CONNECT</h2>
-            <div class="additional-text">
-                <p>vq_t</p>
-                <p>otis@otis.team</p>
-            </div>
-            <div class="logo-text">
-                <h3>OMG</h3>
-                <p>Pew</p>
-            </div>
+            <p>Pew</p>
+            <p>oth@oths.tuam</p>
             <div class="logo" onclick="window.open('https://discordapp.com/users/1052972231560548432/', '_blank')">
                 <img src="https://raw.githubusercontent.com/cinoxdz/main/main/images/discord-logo.png" alt="لوغو">
             </div>
@@ -45,5 +41,7 @@
 
     <script src="script.js"></script>
 </body>
+
+</html>
 
 </html>
