--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
         <!-- Second Part (Dim Black Background for Contact Info) -->
         <div class="part2">
-            <h3>OMG</h3>
-            <p>vq_1</p>
-            <h2>CONNECT</h2>
-            <p>Pew</p>
-            <p>oth@oths.tuam</p>
+            <div class="grid-container">
+                <h3 class="omg">OMG</h3>
+                <h2 class="connect">CONNECT</h2>
+                <p class="vq1">vq_1</p>
+                <p class="email">otis@otis.team</p>
+            </div>
             <div class="logo" onclick="window.open('https://discordapp.com/users/1052972231560548432/', '_blank')">
                 <img src="https://raw.githubusercontent.com/cinoxdz/main/main/images/discord-logo.png" alt="لوغو">
             </div>
@@ -41,7 +42,5 @@
 
     <script src="script.js"></script>
 </body>
-
-</html>
 
 </html>
