--- a/index.html
+++ b/index.html
@@ -5,38 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Otis</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/cinoxdz/main/main/images/my-photo.jpg" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <!-- Fixed Background Container -->
     <div class="fixed-container"></div>
 
-    <!-- Overlay Text -->
-    <div class="overlay-text">
-        Otis
+    <div class="overlay-text">Otis
         <div class="small-text">(Made with love by Otis)</div>
     </div>
 
-    <!-- Content Section -->
     <div class="content">
         <div class="image-text-section">
             <div class="text-container">
-                <div class="text">Fine Shyts</div>
+                <div class="text" style="font-size: 3rem !important;">Fine Shyts</div>
                 <div class="small-text">Wanna be my fine shyt?</div>
             </div>
-            <img class="image" src="https://raw.githubusercontent.com/cinoxdz/main/main/images/discord-log" alt="Scrolling Image">
+            <img class="image" src="https://media.discordapp.net/attachments/1341426971372028014/1341429454219640913/8cf40abd776e8293e45a43a64f698803.jpg?ex=67b5f708&is=67b4a588&hm=886b5cf803dab23901b095afdc6398a4216ec98843f46fbbfefd44890dc80c9d&" alt="Scrolling Image">
         </div>
     </div>
 
-    <!-- Footer -->
     <div class="footer-wrapper">
         <footer class="footer">
             <div class="footer-section">
                 <h2>OMG</h2>
                 <p>Pew</p>
-                <button onclick="window.open('https://discord.com/users/1052972231560548432/', '_blank')">
-                    <i class="fa-brands fa-discord"></i>
-                </button>
+                <button onclick="document.location='https://discord.com/users/1052972231560548432/'"><i class="fa-brands fa-discord"></i></button>
             </div>
             <div class="footer-section">
                 <h2>CONNECT</h2>
@@ -44,10 +36,9 @@
                 <p>otis@otis.team</p>
             </div>
         </footer>
-        <p class="footer-bottom">Otis Â© 2025. All rights reserved.</p>
+        <p class="footer-bottom">Otis © 2025. All rights reserved.</p>
     </div>
 
-    <!-- JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="script.js"></script>
 </body>
